# Spark-SDK

./: CMakeLists.txt  EULA.txt  pyocd.yml
app/example/: CMakeLists.txt
app/example/audio_4-channel/: CMakeLists.txt  audio_4-channel_coord.c  audio_4-channel_node.c  swc_cfg_coord.h  swc_cfg_node1.h  swc_cfg_node2.h  swc_cfg_node3.h  swc_cfg_node4.h
app/example/audio_compression/: CMakeLists.txt  audio_compression_coord.c  audio_compression_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/audio_high_resolution/: CMakeLists.txt  audio_high_resolution_coord.c  audio_high_resolution_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/audio_mixer/: CMakeLists.txt  audio_mixer_coord.c  audio_mixer_node.c  swc_cfg_coord.h  swc_cfg_node1.h  swc_cfg_node2.h
app/example/audio_streaming/: CMakeLists.txt  audio_streaming_coord.c  audio_streaming_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/audio_user_data/: CMakeLists.txt  audio_user_data_coord.c  audio_user_data_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/connection_priority/: CMakeLists.txt  connection_priority_coord.c  connection_priority_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/fragmentation/: CMakeLists.txt  frag_coord.c  frag_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/hello_world/: CMakeLists.txt  hello_world_coord.c  hello_world_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/pairing_basic/: CMakeLists.txt  pairing_basic_coord.c  pairing_basic_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/pairing_gaming_hub/: CMakeLists.txt  pairing_gaming_hub_dongle.c  pairing_gaming_hub_headset.c  pairing_gaming_hub_keyboard.c  pairing_gaming_hub_mouse.c  swc_cfg_dongle.h  swc_cfg_headset.h  swc_cfg_keyboard.h  swc_cfg_mouse.h
app/example/ranging/: CMakeLists.txt  ranging_coord.c  ranging_node.c  swc_cfg_coord.h  swc_cfg_node.h
app/example/star_network/: CMakeLists.txt  star_network_coord.c  star_network_node.c  swc_cfg_coord.h  swc_cfg_node1.h  swc_cfg_node2.h
bsp/: CMakeLists.txt
bsp/hardware/: evk.cmake
bsp/hardware/evk/: evk.c  evk.h  evk_audio.c  evk_audio.h  evk_clock.c  evk_flash.c  evk_flash.h  evk_it.c  evk_timer_ext.h  stm32g4xx_hal_timebase_tim.c
bsp/hardware/evk/GCC/: startup_stm32g473retx.s
bsp/interface/app/: CMakeLists.txt
bsp/interface/app/audio_4-channel/: CMakeLists.txt  iface_audio_4-channel.h  iface_audio_4-channel_evk.c
bsp/interface/app/audio_compression/: CMakeLists.txt  iface_audio_compression.h  iface_audio_compression_evk.c
bsp/interface/app/audio_high_resolution/: CMakeLists.txt  iface_audio_high_resolution.h  iface_audio_high_resolution_evk.c
bsp/interface/app/audio_mixer/: CMakeLists.txt  iface_audio_mixer.h  iface_audio_mixer_evk.c
bsp/interface/app/audio_streaming/: CMakeLists.txt  iface_audio_streaming.h  iface_audio_streaming_evk.c
bsp/interface/app/audio_user_data/: CMakeLists.txt  iface_audio_user_data.h  iface_audio_user_data_evk.c
bsp/interface/app/bsp_validator/: CMakeLists.txt  iface_validator.h  iface_validator_evk.c
bsp/interface/app/connection_priority/: CMakeLists.txt  iface_connection_priority.h  iface_connection_priority_evk.c
bsp/interface/app/fragmentation/: CMakeLists.txt  iface_fragmentation.h  iface_fragmentation_evk.c
bsp/interface/app/hello_world/: CMakeLists.txt  iface_hello_world.h  iface_hello_world_evk.c
bsp/interface/app/pairing_basic/: CMakeLists.txt  iface_pairing_basic.h  iface_pairing_basic_evk.c
bsp/interface/app/pairing_gaming_hub/: CMakeLists.txt  iface_pairing_gaming_hub.h  iface_pairing_gaming_hub_evk.c
bsp/interface/app/ranging/: CMakeLists.txt  iface_ranging.h  iface_ranging_evk.c
bsp/interface/app/star_network/: CMakeLists.txt  iface_star_network.h  iface_star_network_evk.c
bsp/interface/audio_core/: iface_audio.h  iface_audio_evk.c
bsp/interface/pairing/: iface_pairing.h  iface_pairing_evk.c
bsp/interface/wireless_core/: iface_wireless.h  iface_wireless_evk.c
core/audio/: CMakeLists.txt  sac_api.c  sac_api.h  sac_error.h  sac_stats.c  sac_stats.h
core/audio/endpoint/: sac_mixer_endpoint.c  sac_mixer_endpoint.h
core/audio/gate/: sac_fallback_gate.c  sac_fallback_gate.h
core/audio/module/: sac_fallback_module.c  sac_fallback_module.h  sac_mixer_module.c  sac_mixer_module.h
core/audio/processing/: sac_cdc.c  sac_cdc.h  sac_cdc_clock_steering.c  sac_cdc_clock_steering.h  sac_compression.c  sac_compression.h  sac_mute_on_underflow.c  sac_mute_on_underflow.h  sac_mute_packet.c  sac_mute_packet.h  sac_packing.c  sac_packing.h  sac_src_cmsis.c  sac_src_cmsis.h  sac_volume.c  sac_volume.h
core/ranging/: CMakeLists.txt
core/ranging/api/: CMakeLists.txt  srac_api.c  srac_api.h  srac_error.h
core/wireless/: CMakeLists.txt
core/wireless/api/: CMakeLists.txt  swc_error.h  swc_stats.c  swc_stats.h  swc_utils.h
core/wireless/api/sr1000/: CMakeLists.txt  swc_api.c  swc_api.h  swc_def.h
core/wireless/cfg/: spark_wps_cfg_template.h
core/wireless/link/: CMakeLists.txt  link_channel_hopping.c  link_channel_hopping.h  link_connect_status.h  link_distributed_desync.h  link_error.h  link_fallback.c  link_fallback.h  link_multi_radio.c  link_multi_radio.h  link_phase.h  link_protocol.h  link_random_datarate_offset.c  link_random_datarate_offset.h  link_saw_arq.c  link_saw_arq.h  link_scheduler.c  link_scheduler.h
core/wireless/pairing/: CMakeLists.txt  swc_pairing.c  swc_pairing.h
core/wireless/phy/: CMakeLists.txt  sr_phy_error.h  sr_radio_model.h
core/wireless/protocol_stack/: CMakeLists.txt  wps.c  wps.h  wps_callback.c  wps_callback.h  wps_def.h  wps_error.h  wps_frag.c  wps_frag.h  wps_mac.c  wps_mac.h  wps_process.c  wps_stats.c  wps_stats.h  wps_utils.c  wps_utils.h
core/wireless/script/: spark-format.sh
core/wireless/toolchain/: CMakeLists.txt  gcc_x86.cmake
core/wireless/transceiver/: CMakeLists.txt  sr_api_error.h
core/wireless/xlayer/: CMakeLists.txt  xlayer.h  xlayer_queue.c  xlayer_queue.h
lib/: CMakeLists.txt
lib/spark/queue/: CMakeLists.txt  circular_queue.c  circular_queue.h  circular_queue_critical_section_template.h  queue.c  queue.h
(+49 files in other folders)
