cmake_minimum_required(VERSION 3.13)
option(BUILD_SDK_UNIT_TESTS "Build SDK unit tests" OFF)

if(BUILD_SDK_UNIT_TESTS)
    include(toolchain/gcc-x86-compiler.cmake)
else()
    include(toolchain/gcc-arm-compiler.cmake)
endif()

if(BUILD_SDK_UNIT_TESTS)
    project(SDK-Unit-Tests CXX C)
    add_subdirectory(test)
    add_subdirectory(core)
    add_subdirectory(lib)
else()
    project(SDK-Dev CXX C ASM)
    add_subdirectory(bsp)
    if (HARDWARE STREQUAL "NUCLEO-U575ZI-Q")
        include(toolchain/gcc-arm-flags-stm32u5.cmake)
    else()
        include(toolchain/gcc-arm-flags-stm32g4.cmake)
    endif()
    add_subdirectory(lib)
    add_subdirectory(driver)
    add_subdirectory(core)
    add_subdirectory(app)
endif()
