if (APP STREQUAL "Audio-Compression")
    add_subdirectory(audio_compression)
elseif (APP STREQUAL "Audio-High-Res")
    add_subdirectory(audio_high_resolution)
elseif (APP STREQUAL "Audio-4-Channel")
    add_subdirectory(audio_4-channel)
elseif (APP STREQUAL "Audio-Streaming")
    add_subdirectory(audio_streaming)
elseif (APP STREQUAL "Audio-Streaming-Clock-Steering")
    add_subdirectory(audio_streaming_clock_steering)
elseif (APP STREQUAL "Audio-User-Data")
    add_subdirectory(audio_user_data)
elseif (APP STREQUAL "Audio-Mixer")
    add_subdirectory(audio_mixer)
elseif (APP STREQUAL "Connection-Priority")
    add_subdirectory(connection_priority)
elseif (APP STREQUAL "Fragmentation")
    add_subdirectory(fragmentation)
elseif (APP STREQUAL "Hello-World")
    add_subdirectory(hello_world)
elseif (APP STREQUAL "Pairing-Basic")
    add_subdirectory(pairing_basic)
elseif (APP STREQUAL "Pairing-Gaming-Hub")
    add_subdirectory(pairing_gaming_hub)
elseif (APP STREQUAL "Ranging")
    add_subdirectory(ranging)
elseif (APP STREQUAL "Star-Network")
    add_subdirectory(star_network)
elseif (APP STREQUAL "All")
    add_subdirectory(audio_compression)
    add_subdirectory(audio_high_resolution)
    add_subdirectory(audio_4-channel)
    add_subdirectory(audio_streaming)
    add_subdirectory(audio_user_data)
    add_subdirectory(audio_mixer)
    add_subdirectory(connection_priority)
    add_subdirectory(fragmentation)
    add_subdirectory(hello_world)
    add_subdirectory(pairing_basic)
    add_subdirectory(pairing_gaming_hub)
    add_subdirectory(ranging)
    add_subdirectory(star_network)
endif()
