add_library(iface_audio_high_resolution "")
set_target_properties(iface_audio_high_resolution PROPERTIES LINKER_LANGUAGE C)

target_link_libraries(iface_audio_high_resolution PUBLIC wps max98091_driver audio_core hardware)
target_include_directories(iface_audio_high_resolution PUBLIC ${CMAKE_CURRENT_LIST_DIR})

if (HARDWARE STREQUAL "EVK")
    target_sources(iface_audio_high_resolution PRIVATE iface_audio_high_resolution_evk.c)

elseif(HARDWARE STREQUAL "PULSAR")
    target_sources(iface_audio_high_resolution PRIVATE iface_audio_high_resolution_pulsar.c)
endif()